Closed Bug 341605 Opened 18 years ago Closed 18 years ago

Unused params warnings in nsJSEventListener.cpp

Categories

(Core :: DOM: Events, defect)

defect
Not set
trivial

Tracking

()

RESOLVED FIXED

People

(Reporter: markh, Assigned: markh)

References

Details

Attachments

(1 file)

nsJSEventListener.cpp generates compile warnings I introduced with the dom agnostic work.
Assignee: events → mhammond
Status: NEW → ASSIGNED
Attachment #225677 - Flags: review?(mrbkap)
Comment on attachment 225677 [details] [diff] [review]
Patch to remove the vars and move an orphaned comment.

If it compiles, r=mrbkap ;-)
Attachment #225677 - Flags: review?(mrbkap) → review+
Attachment #225677 - Flags: superreview?(bzbarsky)
Attachment #225677 - Flags: superreview?(bzbarsky) → superreview+
Checking in nsJSEventListener.cpp;
new revision: 1.56; previous revision: 1.55
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: