Fix bug 341605 - Unused params warnings in nsJSEventListener.cpp r=mrbkap, sr=bz